<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2023 Rúben Sousa
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/headerTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/dimens_24">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtClassName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lớp Mickey 01 - WorldKids Bình Tân WorldKids"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text30sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dimens_8"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/teacher"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text20sp" />

                    <TextView
                        android:id="@+id/txtManager"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimens_4"
                        android:text="Nguyễn Thị Kim Anh"
                        android:textColor="@color/color3E9346"
                        android:textSize="@dimen/text20sp"
                        android:textStyle="bold" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="@dimen/dimens_206"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimens_27"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/verify_in_class"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text14sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/layoutVerify"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimens_27"
                    android:layout_marginStart="@dimen/dimens_4"
                    android:layout_marginTop="@dimen/dimens_8"
                    android:background="@drawable/selector_button"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btnVerify"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:duplicateParentState="true"
                        android:text="@string/verify"
                        android:textColor="@color/selector_text"
                        android:textSize="@dimen/text14sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imgCheck"
                        android:layout_width="@dimen/dimens_16"
                        android:layout_height="@dimen/dimens_16"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginStart="@dimen/dimens_8"
                        android:contentDescription="@null"
                        android:duplicateParentState="true"
                        android:visibility="gone"
                        app:srcCompat="@drawable/baseline_check_24"
                        app:tint="@color/selector_text" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/dimens_16"
                android:layout_weight="0.5"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10:26"
                    android:textColor="@color/color3968DA"
                    android:textSize="@dimen/text48sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtDatetime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimens_4"
                    android:text="Thứ Hai, 13 tháng 02 năm 2023"
                    android:textColor="@color/color3968DA"
                    android:textSize="@dimen/text24sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <FrameLayout
                android:id="@+id/btnSetting"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:background="@color/transparent"
                    android:duplicateParentState="true"
                    app:srcCompat="@drawable/selector_button_settings" />
            </FrameLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/headerCheckIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_80"
            android:background="@color/colorDCF1DD"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/dimens_24"
            android:paddingTop="@dimen/dimens_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerTitle">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow android:weightSum="5">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/present"
                        android:textColor="@color/color999999"
                        android:textSize="@dimen/text14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/off_"
                        android:textColor="@color/color999999"
                        android:textSize="@dimen/text14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/confirm_off"
                        android:textColor="@color/color999999"
                        android:textSize="@dimen/text14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/confirm_delay"
                        android:textColor="@color/color999999"
                        android:textSize="@dimen/text14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/off"
                        android:textColor="@color/color999999"
                        android:textSize="@dimen/text14sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow android:weightSum="5">

                    <TextView
                        android:id="@+id/txtPRESENT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="10"
                        android:textColor="@color/color3E9346"
                        android:textSize="@dimen/text26sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtABSENT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="10"
                        android:textColor="@color/colorF7AD1A"
                        android:textSize="@dimen/text26sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtON_LEAVE"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="10"
                        android:textColor="@color/colorF27F0C"
                        android:textSize="@dimen/text26sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtLATE"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="10"
                        android:textColor="@color/color8939DA"
                        android:textSize="@dimen/text26sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtOFF_WITH_LETTER"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="10"
                        android:textColor="@color/colorEA1911"
                        android:textSize="@dimen/text26sp"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/txtNoCheckIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimens_40"
            android:layout_marginTop="@dimen/dimens_24"
            android:text="@string/noCheckIn"
            android:textColor="@color/color999999"
            android:textSize="@dimen/text14sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvNoCheckIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimens_40"
            android:layout_marginTop="@dimen/dimens_24"
            android:minHeight="@dimen/dimens_275"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <TextView
            android:id="@+id/txtCheckIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimens_40"
            android:layout_marginTop="@dimen/dimens_24"
            android:text="@string/checkIn"
            android:textColor="@color/color999999"
            android:textSize="@dimen/text14sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvCheckIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimens_40"
            android:layout_marginTop="@dimen/dimens_24"
            android:minHeight="@dimen/dimens_275"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>
